--- a/templates/sshd_config.j2
+++ b/templates/sshd_config.j2
@@ -53,7 +53,9 @@ HostbasedAuthentication no
 # Change to yes to enable challenge-response passwords (beware issues with
 # some PAM modules and threads)
 ChallengeResponseAuthentication no
+{% if sshd_enable_pam %}
 UsePAM {{ sshd_pam }}
+{% endif %}
 
 # Change to no to disable tunnelled clear text passwords
 PasswordAuthentication {{ sshd_password_authentification }}
