Syntax error creating incorrect sshd_config

--- a/templates/sshd_config.j2
+++ b/templates/sshd_config.j2
@@ -17,7 +17,7 @@ Protocol {{ sshd_protocol_version }}
 
 PubkeyAuthentication {{ sshd_pubkey_authentication }}
 
-HostKeyAlgorithms {{ sshd_host_key_algorithms }}
+HostKeyAlgorithms {{ sshd_host_key_algorithms| join(',') }}
 
 {% for key in sshd_host_key_files -%}
 HostKey {{key}}
