Fix sftp-server path in sshd_config

--- a/templates/sshd_config.j2
+++ b/templates/sshd_config.j2
@@ -94,7 +94,7 @@ ClientAliveCountMax {{ sshd_client_alive_countMax }}
 
 ### SFTP CONFIGURATION ###
 
-Subsystem sftp /usr/lib/openssh/sftp-server
+Subsystem sftp {{ host_sftp_server_path }}
 
 {% if sshd_accept_env -%}
 # Allow client to pass environment variables
